<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_full_name">Behavioral Analysis Generator</string>

    <string name="txt_view_statement">Click below to View Current Month Statement</string>

    <string name="app_name">WearApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_notification_landing">View Notification</string>
    <string name="txt_email_statement">View Statement</string>
    <string name="txt_terms_conditions">Terms &amp; Condition</string>
    <string name="txt_about_terms_conditions">I am a zoomable text view. Zoom in or zoom out by pinch gesture.\nI am a zoomable text view. Zoom in or zoom out by pinch gesture.\nI am a zoomable text view. Zoom in or zoom out by pinch gesture.\nI am a zoomable text view. Zoom in or zoom out by pinch gesture.\nI am a zoomable text view. Zoom in or zoom out by pinch gesture.\n</string>
    <!-- Notification Strings -->
    <string name="txt_register_now">  Register Now  </string>
    <string name="txt_later">  Later  </string>
    <string name="title_notification">LLOYDS BANKING</string>
    <string name="notification_small_view_txt">Now you can request for monthly statements using our mobile application. Select Register Now and its done.</string>

    <string name="notification_big_view_txt">Now you can request for monthly statements using our mobile application. Select Register Now and its done.</string>
    <string name="txt_email_registered">Your response have been sent to server.You will start receiving monthly statements on %s of every month. </string>
    <string name="title_activity_tn_c">TnCActivity</string>


    <!-- Strings for List Item -->
    <string name="txt_amount">£%s5</string>
    <string name="txt_ben">User%s</string>
    <string name="txt_date">%s-03-2014</string>
    <string name="txt_ref">Ref%s</string>
    <string name="txt_balance">Balance : £600</string>


</resources>
