<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/btn_view_statements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_email_statement"/>

    <Button
        android:id="@+id/btn_view_terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_terms_conditions"/>

    <com.tcs.wearapp.view.ZoomableTextView
        android:id="@+id/txt_zoomable_message"
        custom:isZoomable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/notification_big_view_txt"/>

    <TextView
        android:id="@+id/txt_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>