<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="256dp"
    android:background="@drawable/splash_image">



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_alignParentTop="true"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp">

        <ImageView
            android:id="@+id/img_appicon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:src="@drawable/ic_launcher"/>

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="vertical">

           <TextView
               android:id="@+id/txt_title"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/title_notification"
               android:textColor="@color/black"
               />

           <TextView
               android:id="@+id/txt_notification_message"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/notification_big_view_txt"
               android:layout_below="@id/txt_title"
               android:textColor="@color/grey"
              />
           </LinearLayout>


    </LinearLayout>




    <LinearLayout
        android:id="@+id/ll_action"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/btn_notification_positive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_register_now"
            android:textColor="@color/grey"
            android:padding="5dp"
            android:gravity="center_horizontal"
            android:background="@drawable/divider"
            android:textSize="20sp"
            android:focusable="true"
            android:clickable="true"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/btn_notification_negative"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_later"
            android:textColor="@color/grey"
            android:padding="5dp"
            android:gravity="center_horizontal"
            android:background="@drawable/divider"
            android:textSize="20sp"
            android:clickable="true"
            android:focusable="true"
            android:layout_weight="1"
            />
        </LinearLayout>





</RelativeLayout>